# spritebench

./: .gitignore  LICENSE  README.md
csv/: cs_20000.csv  cs_forwardplus_20000.csv  gds_20000.csv  gds_forwardplus_20000.csv  gds_html5_20000.csv  graphicsgd126_20000.csv  graphicsgd_11_20000.csv  graphicsgd_20000.csv  graphicsgd_forwardplus_20000.csv  graphicsgd_html5_20000.csv  plot.py  rust_20000.csv  rustbalanced_20000.csv  rustbalanced_forwardplus_20000.csv  rustbalanced_html5_20000.csv  rustdisengaged_20000.csv  rustdisengaged_forwardplus_20000.csv  rustdisengaged_html5_20000.csv
csv/forwardplus/: cs_2000.csv  gds_20000.csv  graphicsgd_20000.csv
other/: cs_10000.csv  cs_forwardplus_20000.csv  gds_10000.csv  gds_forwardplus_20000.csv  graphicsgd_10000.csv  graphicsgd_forwardplus_20000.csv
spritebench_cs/: Main.cs  Main.cs.uid  Sprite.cs  Sprite.cs.uid  export_presets.cfg  main.tscn  project.godot  spritebench.sln
spritebench_gdscript/: export_presets.cfg  main.gd  main.gd.uid  main.tscn  project.godot  sprite.gd  sprite.gd.uid
spritebench_go/: go.mod  sprite.go
spritebench_go/graphics/: export_presets.cfg  icon.svg.import  project.godot
spritebench_graphicsgd/: go.mod  main.go  sprite.go
spritebench_graphicsgd/graphics/: export_presets.cfg  library.gdextension  library.gdextension.uid  main.tscn
spritebench_rust/godot/: export_presets.cfg  icon.svg.import  main.tscn  project.godot  (+2 more)
spritebench_rust/rust/: Cargo.toml  README.md
spritebench_rust/rust/.cargo/: config.toml
spritebench_rust/rust/src/: lib.rs  sprite.rs  window.rs
