[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# For balanced profile:
# godot = "0.4.5"

# For disengaged profile (without memory safeguards)
godot = { version = "0.4.5", features = ["safeguards-release-disengaged"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3