[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
disengaged = ["godot/safeguards-release-disengaged"]

[dependencies]
rand = "0.10.0"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["api-custom", "experimental-wasm", "lazy-function-tables"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3